<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo7"
    tools:context="com.pmm.simarro.pmdm_banco_llopischristian.transferencias">

    <!--<com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmer_transferencias"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        app:layout_constraintRight_toRightOf="@+id/constraintLayout3"
        app:layout_constraintTop_toTopOf="@+id/cancel">

        <Button
            android:id="@+id/ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#b22222"
            android:onClick="ok"
            android:text="@string/confirmar"
            android:textColor="@android:color/white"
            android:textStyle="bold"/>

    </com.facebook.shimmer.ShimmerFrameLayout>-->

    <Button
        android:id="@+id/ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#b22222"
        android:onClick="ok"
        android:text="@string/confirmar"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        app:layout_constraintRight_toRightOf="@+id/shimmer_transferencias"
        app:layout_constraintTop_toTopOf="@+id/cancel"/>

    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:background="#b22222"
        android:onClick="cancel"
        android:text="@string/cancelar"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@+id/shimmer_transferencias"
        app:layout_constraintTop_toBottomOf="@+id/shimmer_transferencias" />

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmer_transferencias"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="60dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayout3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#93ff0000">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:text="@string/importe"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="@+id/textView6"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

            <android.support.constraint.ConstraintLayout
                android:id="@+id/contenedorMia"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@+id/textView9"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup">

                <Spinner
                    android:id="@+id/cuentasMias"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:id="@+id/contenedorAjena"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@+id/textView9"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup">

                <EditText
                    android:id="@+id/ca1"
                    android:layout_width="80dp"
                    android:layout_height="0dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:background="#93ffffff"
                    android:ems="10"
                    android:inputType="number"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/ca2"
                    android:layout_width="80dp"
                    android:layout_height="0dp"
                    android:layout_marginBottom="0dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:background="#93ffffff"
                    android:ems="10"
                    android:inputType="number"
                    app:layout_constraintBottom_toBottomOf="@+id/ca1"
                    app:layout_constraintLeft_toRightOf="@+id/ca1"
                    app:layout_constraintTop_toTopOf="@+id/ca1" />

                <EditText
                    android:id="@+id/ca3"
                    android:layout_width="80dp"
                    android:layout_height="0dp"
                    android:layout_marginBottom="0dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:background="#93ffffff"
                    android:ems="10"
                    android:inputType="number"
                    app:layout_constraintBottom_toBottomOf="@+id/ca2"
                    app:layout_constraintLeft_toRightOf="@+id/ca2"
                    app:layout_constraintTop_toTopOf="@+id/ca2" />

                <EditText
                    android:id="@+id/ca4"
                    android:layout_width="80dp"
                    android:layout_height="0dp"
                    android:layout_marginBottom="0dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="0dp"
                    android:background="#93ffffff"
                    android:ems="10"
                    android:inputType="number"
                    app:layout_constraintBottom_toBottomOf="@+id/ca3"
                    app:layout_constraintLeft_toRightOf="@+id/ca3"
                    app:layout_constraintTop_toTopOf="@+id/ca3" />
            </android.support.constraint.ConstraintLayout>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/cuentaOrigen"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <GridView
                android:id="@+id/CuentasOrigen"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="8dp"
                android:background="#93ffffff"
                android:numColumns="2"
                app:layout_constraintBottom_toTopOf="@+id/guideline17"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="@+id/textView5"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                app:layout_constraintVertical_bias="1.0" />

            <android.support.constraint.Guideline
                android:id="@+id/guideline17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.35"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="200dp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/cuentaDestino"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="@+id/CuentasOrigen"
                app:layout_constraintTop_toTopOf="@+id/guideline17" />

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/radioGroup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="7dp"
                android:orientation="horizontal"
                android:weightSum="1"
                app:layout_constraintLeft_toLeftOf="@+id/textView6"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6">

                <RadioButton
                    android:id="@+id/cuentaMia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.75"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/cuentaMia"
                    android:textAllCaps="true"
                    android:textStyle="bold|italic" />

                <RadioButton
                    android:id="@+id/cuentaAjena"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/cuentaAjena"
                    android:textAllCaps="true"
                    android:textStyle="bold|italic" />

            </RadioGroup>

            <EditText
                android:id="@+id/importe"
                android:layout_width="214dp"
                android:layout_height="47dp"
                android:layout_marginTop="8dp"
                android:background="#93ffffff"
                android:ems="10"
                android:inputType="number|numberDecimal"
                app:layout_constraintLeft_toLeftOf="@+id/textView9"
                app:layout_constraintTop_toBottomOf="@+id/textView9" />

            <Spinner
                android:id="@+id/divisa"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                app:layout_constraintBottom_toBottomOf="@+id/importe"
                app:layout_constraintLeft_toRightOf="@+id/importe"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/importe"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp" />

            <CheckBox
                android:id="@+id/enviarJustificante"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/justificante"
                android:textAllCaps="false"
                android:textStyle="bold|italic"
                app:layout_constraintLeft_toLeftOf="@+id/importe"
                app:layout_constraintTop_toBottomOf="@+id/importe" />

        </android.support.constraint.ConstraintLayout>

    </com.facebook.shimmer.ShimmerFrameLayout>




</android.support.constraint.ConstraintLayout>
